--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI = "mongodb+srv://sfrost488:lFHjlaWEYOyISV6A@cluster0.qfuag7b.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI = "mongodb+srv://sfrost488:lFHjlaWEYOyISV6A@cluster0.qfuag7b.mongodb.net/inshort-news?retryWrites=true&w=majority&appName=Cluster0"
 PORT = 8000 
